fixed some bugs

--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
     "    def softmax(self, z):\n",
     "        return 1/sum(np.exp(z)) * np.exp(z)\n",
     "\n",
-    "    def stable_softmax(x):\n",
+    "    def stable_softmax(self, x):\n",
     "        # \"\"\" ... numerically stable way.\"\"\"\n",
     "        shiftx = x - np.max(x)\n",
     "        exps = np.exp(shiftx)\n",
@@ -449,12 +449,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "class NeuralNetwork:\n",
-    "    def __init__(self, learning_rate=0.01, hidden_layer_u):\n",
+    "    def __init__(self, train_data, train_labels, test_data, test_labels, hidden_layer_u, learning_rate=0.01):\n",
     "\n",
     "        self.x_train = train_data\n",
     "        self.x_test = test_data\n",
@@ -489,24 +489,143 @@
     "        self.z2 = np.array([self.W2.dot(self.h)]).transpose() + self.b2\n",
     "        self.y_hat = Activation().use('stable_softmax')(self.z2)    \n",
     "        \n",
-    "    def backward(self, X, y, learning_rate, loss_func):\n",
-    "        pass\n",
+    "    def back_prop(self,Ytr1,Xtr1):\n",
     "        \n",
-    "    def train(self, X, y, epochs, learning_rate):\n",
-    "        loss_func = LossFunctions()\n",
-    "        for i in range(epochs):\n",
-    "            output = self.forward(X)\n",
-    "            loss = loss_func.softmax_cross_entropy(y, output)\n",
-    "            self.backward(X, y, learning_rate, loss_func)\n",
-    "            if i % 10 == 0:\n",
-    "                print(\"Epoch \", i, \" loss: \", np.mean(loss))\n",
+    "        y_hat = self.y_hat\n",
+    "        h = self.h\n",
+    "        z1 = self.z1\n",
+    "        \n",
+    "        true = Encoder().one_hot(Ytr1)\n",
+    "\n",
+    "        diff_outer = -(true - y_hat)\n",
+    "\n",
+    "        del_b2 = diff_outer\n",
+    "        del_W2 = np.matmul(diff_outer,np.reshape(h,(1,self.l2)))\n",
+    "        DEL = self.W2.transpose().dot(diff_outer)\n",
+    "\n",
+    "        NAB = np.multiply(DEL, grad_rectified_linear_unit(z1))\n",
+    "        del_b1 = NAB\n",
+    "        del_W1 = np.matmul(np.reshape(NAB, (self.l2,1)), np.reshape(Xtr1, (1,self.l1)))\n",
+    "\n",
+    "        self.W2 = self.W2 - alpha * del_W2\n",
+    "        self.b2 = self.b2 - alpha * del_b2\n",
+    "        self.b1 = self.b1 - alpha * del_b1\n",
+    "        self.W1 = self.W1 - alpha * del_W1\n",
     "                \n",
     "    def predict(self,x):\n",
     "        y_hat_lab = np.zeros(shape = (len(x)))\n",
     "        for i in range(len(x)):\n",
     "            self.forward(x[i])\n",
     "            y_hat_lab[i] = np.argmax(self.y_hat)\n",
-    "        return y_hat_lab\n"
+    "        return y_hat_lab\n",
+    "\n",
+    "    def train(self, epochs):\n",
+    "        x_learn, x_val, y_learning, y_val = train_test_split(self.x_train, self.y_train)\n",
+    "        L = [i for i in range(0,len(x_learn))]\n",
+    "        print('------------------------')\n",
+    "        print(\"training the network\")\n",
+    "\n",
+    "        for j in range(epochs):\n",
+    "            alpha = decay_alpha(j)\n",
+    "            loss = 0\n",
+    "            np.random.shuffle(L)\n",
+    "            \n",
+    "            for i in L:\n",
+    "                self.forward(x_learn[i])\n",
+    "                self.back_prop(y_learning[i], x_learn[i])\n",
+    "                \n",
+    "                loss = loss + LossFunctions().categorical_cross_entropy(self.y_hat, y_learning[i])\n",
+    "            \n",
+    "            loss = loss/len(L)\n",
+    "            predicted_labels_validation = self.predict(x_val)\n",
+    "            print('Epoch :', j)\n",
+    "            print('Loss ->', loss[0])\n",
+    "            print('accuracy ->', Metrics().accuracy(predicted_labels_validation, y_val))\n",
+    "            print('------------------------')\n",
+    "        print('---------training complete----------')\n",
+    "\n",
+    "    def run_test(self):\n",
+    "        temp = self.x_test@self.W1.T + self.b1.T\n",
+    "        temp = np.clip(temp,a_min=0, a_max=temp.max())\n",
+    "        temp = temp@self.W2.T + self.b2.T\n",
+    "        temp = np.exp(temp)\n",
+    "        temp2 = temp.sum(axis=1)\n",
+    "        temp = temp/temp2.reshape(-1,1)\n",
+    "        preds = np.argmax(temp,axis=1)\n",
+    "        print('the testing accuracy is :', Metrics().accuracy(preds, self.y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = NeuralNetwork(train_data, train_labels, test_data, test_labels, 100, 0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model configurations: \n",
+      "W1 has dim (100, 784)\n",
+      "b1 has dim (100, 1)\n",
+      "W2 has dim (10, 100)\n",
+      "b2 has dim (10, 1)\n",
+      "Input has dim 784\n",
+      "Hidden layer has dim 100\n",
+      "Output has dim 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------\n",
+      "training the network\n",
+      "Epoch : 0\n",
+      "Loss -> 0.06488945574244043\n",
+      "accuracy -> 12.693333333333335\n",
+      "------------------------\n",
+      "---------training complete----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.train(epochs=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the testing accuracy is : 12.790000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.run_test()"
    ]
   },
   {
@@ -722,47 +841,6 @@
     "\n",
     "    \n",
     "NN.test_and_summarize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([9])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "NN.y_train[110]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_labels[110]"
    ]
   },
   {
