fixed some bugs

--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,16 +416,24 @@
     "    def categorical_cross_entropy(self, y_hat, label):\n",
     "        return -sum(np.multiply(np.log(y_hat), one_hot(label)))\n",
     "    \n",
-    "    def grad_relu(self, x):\n",
-    "        return (x > 0).astype(int)\n",
-    "    \n",
-    "    def decay_alpha(i):\n",
+    "    def decay_alpha(self, i):\n",
     "        return( 0.01 if i <=12 else (0.001 if i <= 24 else (0.0001)) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Derivative:\n",
+    "    def grad_relu(self, x):\n",
+    "        return (x > 0).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +488,7 @@
     "        print('Hidden layer has dim', self.layer2)\n",
     "        print('Output has dim', self.layer3)\n",
     "\n",
-    "    def forward(self,x):\n",
+    "    def forward(self, x):\n",
     "        \n",
     "        self.z1 = np.array([self.W1.dot(x)]).transpose() + self.b1\n",
     "        vec_rectified_linear_unit = np.vectorize(Activation().use('relu'))\n",
@@ -489,7 +497,7 @@
     "        self.z2 = np.array([self.W2.dot(self.h)]).transpose() + self.b2\n",
     "        self.y_hat = Activation().use('stable_softmax')(self.z2)    \n",
     "        \n",
-    "    def back_prop(self,Ytr1,Xtr1):\n",
+    "    def back_prop(self, Ytr1, Xtr1):\n",
     "        \n",
     "        y_hat = self.y_hat\n",
     "        h = self.h\n",
@@ -500,12 +508,12 @@
     "        diff_outer = -(true - y_hat)\n",
     "\n",
     "        del_b2 = diff_outer\n",
-    "        del_W2 = np.matmul(diff_outer,np.reshape(h,(1,self.l2)))\n",
+    "        del_W2 = np.matmul(diff_outer,np.reshape(h,(1, self.layer2)))\n",
     "        DEL = self.W2.transpose().dot(diff_outer)\n",
     "\n",
-    "        NAB = np.multiply(DEL, grad_rectified_linear_unit(z1))\n",
+    "        NAB = np.multiply(DEL, Derivative().grad_relu(z1))\n",
     "        del_b1 = NAB\n",
-    "        del_W1 = np.matmul(np.reshape(NAB, (self.l2,1)), np.reshape(Xtr1, (1,self.l1)))\n",
+    "        del_W1 = np.matmul(np.reshape(NAB, (self.layer2,1)), np.reshape(Xtr1, (1, self.layer1)))\n",
     "\n",
     "        self.W2 = self.W2 - alpha * del_W2\n",
     "        self.b2 = self.b2 - alpha * del_b2\n",
@@ -522,11 +530,11 @@
     "    def train(self, epochs):\n",
     "        x_learn, x_val, y_learning, y_val = train_test_split(self.x_train, self.y_train)\n",
     "        L = [i for i in range(0,len(x_learn))]\n",
-    "        print('------------------------')\n",
     "        print(\"training the network\")\n",
+    "        print('------------------------')\n",
     "\n",
     "        for j in range(epochs):\n",
-    "            alpha = decay_alpha(j)\n",
+    "            alpha = LossFunctions().decay_alpha(j)\n",
     "            loss = 0\n",
     "            np.random.shuffle(L)\n",
     "            \n",
@@ -542,7 +550,7 @@
     "            print('Loss ->', loss[0])\n",
     "            print('accuracy ->', Metrics().accuracy(predicted_labels_validation, y_val))\n",
     "            print('------------------------')\n",
-    "        print('---------training complete----------')\n",
+    "        print('********training complete*******')\n",
     "\n",
     "    def run_test(self):\n",
     "        temp = self.x_test@self.W1.T + self.b1.T\n",
@@ -557,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -600,247 +608,32 @@
       "------------------------\n",
       "training the network\n",
       "Epoch : 0\n",
-      "Loss -> 0.06488945574244043\n",
-      "accuracy -> 12.693333333333335\n",
+      "Loss -> 0.2530957322312406\n",
+      "accuracy -> 94.90666666666667\n",
       "------------------------\n",
       "---------training complete----------\n"
      ]
     }
    ],
    "source": [
-    "model.train(epochs=2)"
+    "model.train(epochs=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the testing accuracy is : 12.790000000000001\n"
+      "the testing accuracy is : 95.54\n"
      ]
     }
    ],
    "source": [
     "model.run_test()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def rectified_linear_unit(x):\n",
-    "#     if x<0:\n",
-    "#         return(0)\n",
-    "#     else :\n",
-    "#         return(x)\n",
-    "\n",
-    "# def grad_rectified_linear_unit(x):\n",
-    "#     x[x>0] = 1\n",
-    "#     x[x<=0] = 0\n",
-    "#     return x\n",
-    "    \n",
-    "# def one_hot(label):\n",
-    "#     arr = np.zeros(shape = (10,1))\n",
-    "#     arr[label] = 1\n",
-    "#     return arr\n",
-    "\n",
-    "# def categorical_cross_entropy(y_hat, label):\n",
-    "#     return -sum(np.multiply(np.log(y_hat), one_hot(label)))\n",
-    "\n",
-    "# def stable_softmax(X):\n",
-    "#     temp2 = np.exp(X - np.max(X))\n",
-    "#     return temp2 / np.sum(temp2)\n",
-    "\n",
-    "# def decay_alpha(i):\n",
-    "    # return( 0.01 if i <=12 else (0.001 if i <= 24 else (0.0001)) )\n",
-    "    \n",
-    "# def accuracy(y_hat, true):\n",
-    "#     return 100*np.mean(np.where(y_hat == np.reshape(true,len(true)), 1,0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Model configurations are as follows :\n",
-      "-------------------------------------\n",
-      "layer 1\n",
-      "W1 has dim (100, 784)\n",
-      "b1 has dim (100, 1)\n",
-      "W2 has dim (10, 100)\n",
-      "b2 has dim (10, 1)\n",
-      "Input has dim 784\n",
-      "Hidden layer has dim 100\n",
-      "Output has dim 10\n",
-      "\n",
-      "------------------------\n",
-      "start training the net\n",
-      "Epoch Summary for epoch: 0\n",
-      "Loss -> 0.2780669935288418\n",
-      "accuracy -> 94.72\n",
-      "\n",
-      "the testing accuracy of the classifier is : [0.9556]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "\n",
-    "class neural_network:\n",
-    "        \n",
-    "    def __init__(self,lr=0.001,loss_func='categorical_cross_entropy',MNIST=True,xtr=None,xts=None,ytr=None,yts=None):\n",
-    "        \n",
-    "        self.lr = lr\n",
-    "        self.loss_func = 'categorical_cross_entropy'\n",
-    "        \n",
-    "        if MNIST != True :\n",
-    "            assert(None not in [xtr,xts,ytr,yts])\n",
-    "            self.x_train = xtr\n",
-    "            self.x_test = xts\n",
-    "            self.y_train = ytr\n",
-    "            self.y_test = yts\n",
-    "\n",
-    "        else :\n",
-    "            self.prepare_data()\n",
-    "            \n",
-    "    def prepare_data(self):\n",
-    "        \n",
-    "        self.x_train = train_data\n",
-    "        self.x_test = test_data\n",
-    "        self.y_train = train_labels\n",
-    "        self.y_test = test_labels\n",
-    "        \n",
-    "            \n",
-    "        \n",
-    "            \n",
-    "    def print_model(self):\n",
-    "        print('')\n",
-    "        print('Model configurations are as follows :')\n",
-    "        print('-------------------------------------')\n",
-    "        \n",
-    "        print('layer 1')\n",
-    "        print('W1 has dim', self.W1.shape)\n",
-    "        print('b1 has dim', self.b1.shape)\n",
-    "        print('W2 has dim', self.W2.shape)\n",
-    "        print('b2 has dim', self.b2.shape)\n",
-    "        print('Input has dim', self.l1)\n",
-    "        print('Hidden layer has dim', self.l2)\n",
-    "        print('Output has dim', self.l3)\n",
-    "            \n",
-    "    def create_model(self, L2):\n",
-    "        \n",
-    "        self.l1 = 784\n",
-    "        self.l2 = L2\n",
-    "        self.l3 = 10\n",
-    "\n",
-    "        self.W1 = np.random.randn(self.l2,self.l1)/np.sqrt(self.l1)\n",
-    "        self.b1 = np.zeros(shape = (self.l2,1))\n",
-    "        self.W2 = np.random.randn(self.l3,self.l2)/np.sqrt(self.l2)\n",
-    "        self.b2 = np.zeros(shape = (self.l3,1))\n",
-    "    \n",
-    "    def forward(self,x):\n",
-    "        \n",
-    "        self.z1 = np.array([self.W1.dot(x)]).transpose() + self.b1\n",
-    "        vec_rectified_linear_unit = np.vectorize(rectified_linear_unit)\n",
-    "        self.h = vec_rectified_linear_unit(self.z1)\n",
-    "        self.h = self.h.transpose()[0]\n",
-    "        self.z2 = np.array([self.W2.dot(self.h)]).transpose() + self.b2\n",
-    "        self.y_hat = stable_softmax(self.z2)\n",
-    "    \n",
-    "    def predict(self,x):\n",
-    "        y_hat_lab = np.zeros(shape = (len(x)))\n",
-    "        for i in range(len(x)):\n",
-    "            self.forward(x[i])\n",
-    "            y_hat_lab[i] = np.argmax(self.y_hat)\n",
-    "        return y_hat_lab\n",
-    "    \n",
-    "    def back_prop(self,Ytr1,Xtr1):\n",
-    "        \n",
-    "        y_hat = self.y_hat\n",
-    "        h = self.h\n",
-    "        z1 = self.z1\n",
-    "        \n",
-    "        true = one_hot(Ytr1)\n",
-    "\n",
-    "        diff_outer = -(true - y_hat)\n",
-    "\n",
-    "        del_b2 = diff_outer\n",
-    "        del_W2 = np.matmul(diff_outer,np.reshape(h,(1,self.l2)))\n",
-    "        DEL = self.W2.transpose().dot(diff_outer)\n",
-    "\n",
-    "        NAB = np.multiply(DEL, grad_rectified_linear_unit(z1))\n",
-    "        del_b1 = NAB\n",
-    "        del_W1 = np.matmul(np.reshape(NAB, (self.l2,1)), np.reshape(Xtr1, (1,self.l1)))\n",
-    "\n",
-    "        self.W2 = self.W2 - alpha * del_W2\n",
-    "        self.b2 = self.b2 - alpha * del_b2\n",
-    "        self.b1 = self.b1 - alpha * del_b1\n",
-    "        self.W1 = self.W1 - alpha * del_W1\n",
-    "        \n",
-    "        \n",
-    "    def test_and_summarize(self):\n",
-    "        temp = self.x_test@self.W1.T+self.b1.T\n",
-    "        temp = np.clip(temp,a_min=0,a_max=temp.max())\n",
-    "        temp = temp@self.W2.T+self.b2.T\n",
-    "        temp = np.exp(temp)\n",
-    "        temp2 = temp.sum(axis=1)\n",
-    "        temp = temp/temp2.reshape(-1,1)\n",
-    "        preds = np.argmax(temp,axis=1)\n",
-    "        print('the testing accuracy of the classifier is :',sum(preds.reshape(-1,1) == self.y_test.reshape(-1,1))/len(self.y_test))\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "NN = neural_network()\n",
-    "NN.create_model(100)\n",
-    "NN.print_model()\n",
-    "\n",
-    "\n",
-    "\n",
-    "x_learn, x_val, y_learning, y_val = train_test_split(NN.x_train, NN.y_train)\n",
-    "L = [i for i in range(0,len(x_learn))]\n",
-    "epochs = 1\n",
-    "print('')\n",
-    "print('------------------------')\n",
-    "print(\"start training the net\")\n",
-    "\n",
-    "for j in range(epochs):\n",
-    "    \n",
-    "    #IMPLEMETING SGD ALGORITHM\n",
-    "    \n",
-    "    alpha = decay_alpha(j)\n",
-    "    loss = 0\n",
-    "    np.random.shuffle(L)\n",
-    "    \n",
-    "    for i in L:\n",
-    "        NN.forward(x_learn[i])\n",
-    "        NN.back_prop(y_learning[i],x_learn[i])\n",
-    "        \n",
-    "        loss = loss + categorical_cross_entropy(NN.y_hat,y_learning[i])\n",
-    "    \n",
-    "    loss = loss/len(L)\n",
-    "    predicted_labels_validation = NN.predict(x_val)\n",
-    "    print('Epoch Summary for epoch:',j)\n",
-    "    print('Loss ->',loss[0])\n",
-    "    print('accuracy ->',accuracy(predicted_labels_validation,y_val))\n",
-    "    print('')\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    \n",
-    "NN.test_and_summarize()"
    ]
   },
   {
