fixed some bugs, test complete

--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
     "            print('Loss ->', loss[0])\n",
     "            print('accuracy ->', Metrics().accuracy(predicted_labels_validation, y_val))\n",
     "            print('------------------------')\n",
-    "        print('********training complete*******')\n",
+    "        print('********training complete********')\n",
     "\n",
     "    def run_test(self):\n",
     "        temp = self.x_test@self.W1.T + self.b1.T\n",
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -598,37 +598,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "------------------------\n",
       "training the network\n",
-      "Epoch : 0\n",
-      "Loss -> 0.2530957322312406\n",
-      "accuracy -> 94.90666666666667\n",
       "------------------------\n",
-      "---------training complete----------\n"
+      "Epoch : 0\n",
+      "Loss -> 0.11538889774850826\n",
+      "accuracy -> 96.88666666666667\n",
+      "------------------------\n",
+      "Epoch : 1\n",
+      "Loss -> 0.0810980068006625\n",
+      "accuracy -> 96.97333333333333\n",
+      "------------------------\n",
+      "Epoch : 2\n",
+      "Loss -> 0.062386989340136846\n",
+      "accuracy -> 97.15333333333334\n",
+      "------------------------\n",
+      "Epoch : 3\n",
+      "Loss -> 0.04897394350017207\n",
+      "accuracy -> 97.17333333333333\n",
+      "------------------------\n",
+      "Epoch : 4\n",
+      "Loss -> 0.03885849893515345\n",
+      "accuracy -> 97.24000000000001\n",
+      "------------------------\n",
+      "********training complete********\n"
      ]
     }
    ],
    "source": [
-    "model.train(epochs=1)"
+    "model.train(epochs=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the testing accuracy is : 95.54\n"
+      "the testing accuracy is : 97.24000000000001\n"
      ]
     }
    ],
